# RAG_2

./: .env  .env.example  .gitignore  PROJECT.md  README.md  Research_1.md  lessons.jsonl  mcp_config.json  nexus_audit.jsonl  output.txt  pyproject.toml  ragimplement.md  setup_nexus.sh
.agents/: ORIGINAL_REQUEST.md
.agents/orchestrator/: BRIEFING.md  plan.md  progress.md
.agents/sentinel/: BRIEFING.md  handoff.md
.agents/teamwork_preview_explorer_setup_1/: .gitkeep  BRIEFING.md  analysis.md  (+3 more)
.nexus/: log.md
docker_scripts/: Dockerfile.mcp  extract_image.md  extract_image.py
indexes/: rag_local_chunks_bm25.json
prompts/: orchestrator_system.txt  router_system.txt  synthesizer_system.txt  verification_system.txt
qdrant_local/: meta.json
rag_local/: __init__.py  agent_memory.py  cache.py  chunking.py  cli.py  config.py  embed.py  executor.py  graph.py  ingest.py  mcp_client.py  memory.py  orchestrator.py  prompt_registry.py  prompts.py  router.py  sandbox.py  search.py  searxng.py  store.py  tool_router.py  types.py  ui_chainlit.py  ui_textual.py  utils.py  world_state.py
rag_local.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scratch/: extract_shiba.py  list_mcp_tools.py  mcp_tools.json  test_minecraft_plan.py  test_nexus_fixes.py  test_output.txt
scratchpad/: ask_nexus.py  inspect_tools.py  test_full_flow.py  test_graph.py  test_mcp_client.py  test_ollama.py  test_plan.py
tests/: conftest.py  test_cache.py  test_cli.py  test_embed.py  test_executor.py  test_orchestrator.py  test_router.py  test_tool_router.py
(+24 files in other folders)
