[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-local"
version = "0.1.0"
description = "Local router-orchestrator RAG system powered by Ollama, LangGraph, Qdrant, Chainlit, and Textual."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chainlit>=1.2.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.0",
  "pydantic>=2.7.0",
  "qdrant-client>=1.11.0",
  "rank-bm25>=0.2.2",
  "tree-sitter>=0.22.0",
  "typing_extensions>=4.12.0",
]


[project.scripts]
nexus = "rag_local.cli:main"

[tool.setuptools.packages.find]
include = ["rag_local*"]

